--- a/WindowsClient/SDM.WinClient/SDM.Model/CodeTemplates/ReverseEngineerCodeFirst/Entity.tt
+++ b/WindowsClient/SDM.WinClient/SDM.Model/CodeTemplates/ReverseEngineerCodeFirst/Entity.tt
@@ -7,7 +7,7 @@
 #>
 using System;
 using System.Collections.Generic;
-using SDM.Common;
+using SDM.DTO;
 
 namespace <#= code.EscapeNamespace(efHost.Namespace) #>
 {
